@@ -46,9 +46,13 @@ import(oligoClasses)
 exportMethods("boxplot",
               "bg",
               "bg<-",
+              "bgIndex",
+              "bgSequence",
               "db",
               "exprs",
+              "geneNames",
               "getContainer",
+              "getPlatformDesign",
               "getX",
               "getY",
               "hist",
@@ -58,8 +62,18 @@ exportMethods("boxplot",
               "MAplot",
               "mm",
               "mm<-",
+              "mmindex",
+              "mmSequence",
               "pm",
               "pm<-",
+              "pmAllele",
+              "pmindex",
+              "pmFragmentLength",
+              "pmOffset",
+              "pmPosition",
+              "pmSequence",
+              "pmStrand",
+              "probeNames",
               "rma")
 
 ## Exported functions
@@ -81,4 +95,5 @@ export("basecontent",
 export("crlmm",
        "snprma",
        "justSNPRMA",
-       "justCRLMM")
+       "justCRLMM",
+       getPD)
